<resources>
    <string name="app_name">TicTacToe</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="display_info">display__info</string>
    <string name="playWBot_btn">\u0020 play with bot</string>
    <string name="player_name_editTxt">Player Name</string>
    <string name="player_name_txt_placeholder">Player Name</string>
    <string name="logout_btn">logout</string>
    <string name="log_out_btn_display">Log Out</string>
    <string name="logo_img">LogoImg</string>
    <string name="high_score_head_line">High Score</string>
    <string name="highscore_position">1:</string>
    <string name="highscore_time">  00:20</string>
    <string name="highscore_player">Christopher</string>
    <string name="high_score_btn">Highscore</string>
    <string name="high_score_btn_desc">highscoreBtn</string>
    <string name="b22">b22</string>
    <string name="b00">b00</string>
    <string name="b10">b10</string>
    <string name="b20">b20</string>
    <string name="b01">b01</string>
    <string name="b11">b11</string>
    <string name="b21">b21</string>
    <string name="b02">b02</string>
    <string name="b12">b12</string>
    <string name="play_alone">\u0020 play alone</string>
    <string name="game_type_txtView">\u0020 GAME TYPE</string>
    <string name="result_display_draw">Draw! Try Again</string>
    <string name="result_display_friend_win">\'s friend Wins!</string>
    <string name="result_display_tttBot_win">TTTBot Wins!</string>
    <string name="result_display_playerOne_win">Wins!</string>
    <string name="display_current_playerOne">Player:</string>
    <string name="display_current_tttBot">Player: TTTBot</string>


</resources>
