<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@android:color/black"
        >

    <TextView
            android:id="@+id/displayTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tttlogo"
            android:fontFamily="@font/lazer"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="351dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@android:color/black"
            android:id="@+id/frameLayout"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <GridLayout
                android:id="@+id/gameBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style=" ?android:attr/buttonBarStyle"
                android:background="@android:color/holo_purple"
                android:rowCount="3"
                android:columnCount="3">

            <ImageView
                    android:id="@+id/btn00"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b00"/>

            <ImageView
                    android:id="@+id/btn01"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b10"/>

            <ImageView
                    android:id="@+id/btn02"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b20"/>

            <ImageView
                    android:id="@+id/btn03"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b01"/>

            <ImageView
                    android:id="@+id/btn04"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b11"/>

            <ImageView
                    android:id="@+id/btn05"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b21"/>

            <ImageView
                    android:id="@+id/btn06"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b02"/>

            <ImageView
                    android:id="@+id/btn07"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b12"/>

            <ImageView
                    android:id="@+id/btn08"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/b22"/>


        </GridLayout>

    </FrameLayout>

    <Button
            android:text="@string/play"
            android:fontFamily="@font/lazer"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startBtn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pauseBtn"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.33"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="#89AEE1"/>

    <Button
            android:text="@string/pause"
            android:fontFamily="@font/lazer"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.83"
            android:id="@+id/pauseBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="#89AEE1"
            />

    <Chronometer
            android:layout_width="112dp"
            android:layout_height="0dp"
            android:textSize="30sp"
            android:textColor="@android:color/holo_purple"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startBtn"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="@font/lazer"
            android:gravity="center|top"
            android:id="@+id/timer"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/pauseBtn"/>

    <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/o"
            android:id="@+id/highscoreBtn"
            android:scaleType="fitCenter"
            android:background="@drawable/o"
            android:text="@string/high_score_btn"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/lazer84"
            android:textSize="12sp"
            android:contentDescription="@string/high_score_btn_desc"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/displayTxtView"
            android:layout_marginEnd="8dp"/>

    <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/o"
            android:id="@+id/logoutBtn"
            android:scaleType="fitCenter"
            android:background="@drawable/o"
            android:text="@string/logout_btn"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/lazer84"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/displayTxtView"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/log_out_btn_display"
            app:layout_constraintHorizontal_bias="0.87"/>

    <TextView
            android:layout_width="267dp"
            android:layout_height="54dp"
            android:fontFamily="@font/lazer84"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textSize="16sp"
            android:id="@+id/textViewCurrentPlayer"
            android:layout_marginEnd="177dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp"
            app:layout_constraintTop_toBottomOf="@+id/displayTxtView"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>